--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.5",
+        "masmerise/livewire-toaster": "^2.2",
+        "secondnetwork/blade-tabler-icons": "^3.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
