--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "devDependencies": {
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "daisyui": "^4.12.10",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.39",
         "tailwindcss": "^3.4.4",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "tailwind-scrollbar-hide": "^1.1.7"
     }
 }
